[tool.poetry]
name = "spy-collage"
version = "0.1.0"
description = "Configurable Python album art collage generator for Spotify, featuring album discovery and color clustering"
authors = ["Stephan Lensky <stephanl.public@gmail.com>"]
license = "AGPL-3.0-only"

[tool.poetry.scripts]
spy-collage = "spy_collage.main:app"

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.19.0"
dateparser = "^1.1.0"
spotify-uri = "^1.0.3"
requests = "^2.26.0"
"colorgram.py" = "^1.2.0"
Pillow = "^8.4.0"
scikit-image = "^0.18.3"
einops = "^0.3.2"
typer = "^0.4.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.9.3"
mypy = "^0.910"
pylint = "^2.11.1"
docformatter = "^1.4"
types-dateparser = "^1.0.7"
types-requests = "^2.25.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.master]
disable="""
C0103,C0114,C0115,C0116,C0200,C0330,C0326,W0703,W0105,R1705,R0901,R0902,R0903,R0904,R0911,R0912,R0913,R0914,
R0915,R0916,R1702,C0206,R0801,W0707"""
extension-pkg-whitelist="pydantic"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.black]
line-length = 100

[tool.mypy]
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "spotipy.*",
    "scipy.*",
    "spotify_uri.*",
    "colorgram",
    "PIL.*",
    "skimage.*",
    "einops.*",
]
ignore_missing_imports = true
